[project]
name = "scottbrian_throttle"
version = "1.0.0"
description = "Miscellaneous utilities"
readme = "README.rst"
requires-python = "~=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["utilities"]
authors = [{name = "Scott Tuttle", email = "sbtuttle@outlook.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows :: Windows 10"]
dependencies = [
    "more-itertools ~=10.8",
    "pandas ~=2.3",
#    "scottbrian-utils ~=6.0",
    "typing_extensions ~=4.15",
    "wrapt ~=1.17",
    "scottbrian_utils @  file://C:/Users/Tiger/PycharmProjects/scottbrian_utils/dist/scottbrian_utils-6.0.0-py3-none-any.whl"
]

[tool.setuptools]
packages = ["scottbrian_throttle"]
package-dir = {"" = "src"}

[project.urls]
Documentation = "https://scottbrian-throttle.readthedocs.io/en/latest/"
Source = "https://github.com/ScottBrian/scottbrian_throttle.git"

[build-system]
requires = ["setuptools ~=80.9"]
build-backend = 'setuptools.build_meta'
