[project]
name = "scottbrian_throttle"
version = "1.0.0"
description = "Miscellaneous utilities"
readme = "README.rst"
requires-python = "~=3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["utilities"]
authors = [{ name = "Scott Tuttle", email = "sbtuttle@outlook.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows :: Windows 11"]
dependencies = [
    #"scottbrian-utils ~=7.1",
    "scottbrian_utils @  file:///C:/Users/Tiger/PycharmProjects/scottbrian_utils/dist/scottbrian_utils-7.1.0-py3-none-any.whl",
    "typing_extensions ~=4.15",
    "wrapt ~=2.2",
]

[tool.setuptools]
packages = ["scottbrian_throttle"]
package-dir = { "" = "src" }

[project.urls]
Documentation = "https://scottbrian-throttle.readthedocs.io/en/latest/"
Source = "https://github.com/ScottBrian/scottbrian_throttle.git"

[build-system]
requires = ["setuptools ~=82.0"]
build-backend = 'setuptools.build_meta'
