[metadata]
name = scottbrian_throttle
description = Miscellaneous utilities
long_description = file: README.rst
long_description_content_type = text/x-rst
version = 2.0.0
url = https://github.com/ScottBrian/scottbrian_throttle.git
author = Scott Tuttle
author_email = sbtuttle@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Recovery Tools
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
project_urls =
    Documentation =  https://scottbrian-throttle.readthedocs.io/en/latest/
    Source = https://github.com/ScottBrian/scottbrian_throttle.git

[options]
zip_safe = False
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    scottbrian_utils
    typing-extensions
;    scottbrian-throttle @ file://localhost/home/Tiger/PythonProjects/scottbrian_throttle#egg=scottbrian-throttle
;    scottbrian-throttle @ https://github.com/ScottBrian/scottbrian_throttle.git
;dependency_links = https://github.com/ScottBrian/scottbrian_throttle.git
python_requires = >=3.9
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

;[options.extras_require]
;scottbrian_throttle =
;    __init__pyi
;    py.typed
